--- a/views/admin.html
+++ b/views/admin.html
@@ -3,15 +3,19 @@
 	{% block title %}Pint - {{ user.nickname }}{% endblock %}
 		
 	{% block leftblocs %}
-	<div class="navbox">
-		<div class="title">
-			<h3>Admin</h3>
+		<div class="messagebox">
+			<div class="messagebox-top"><div></div></div>
+				<div class="messagebox-content">
+					<div class="title">
+						<h3>Admin</h3>
+					</div>
+					<div class="content">
+						<p>Welcome, oh great and powerful admin!</p>
+						<p>Humble am I in front of such power and authority...</p>
+					</div>
+				</div>
+			<div class="messagebox-bottom"><div></div></div>
 		</div>
-		<div class="content">
-            <p>Welcome, oh great and powerful admin!</p>
-			<p>Humble am I in front of such power and authority...</p>
-		</div>
-	</div>
 	{% endblock %}
 	
 	{% block main %}
