--- a/views/settings.html
+++ b/views/settings.html
@@ -3,16 +3,20 @@
 	{% block title %}Pint - Account Settings{% endblock %}
 
 	{% block leftblocs %}
-	<div class="navbox">
-		<div class="title">
-			<h3>Settings</h3>
+		<div class="messagebox">
+			<div class="messagebox-top"><div></div></div>
+				<div class="messagebox-content">
+					<div class="title">
+						<h3>Settings</h3>
+					</div>
+					<div class="content">
+						<p>Welcome to your control panel!</p>
+						<p>Here you can change your profile and the way you want the site to work for you.</p>
+						<p>Change your nick, add posters you want to follow, or even remove them if you're mean...but do whatever you want, it's your profile ;)</p>
+					</div>
+				</div>
+			<div class="messagebox-bottom"><div></div></div>
 		</div>
-		<div class="content">
-            <p>Welcome to your control panel!</p>
-            <p>Here you can change your profile and the way you want the site to work for you.</p>
-            <p>Change your nick, add posters you want to follow, or even remove them if you're mean...but do whatever you want, it's your profile ;)</p>
-		</div>
-	</div>
 	{% endblock %}
 
 	{% block main %}
