--- a/views/about.html
+++ b/views/about.html
@@ -3,13 +3,17 @@
 	{% block title %}Pint - {{ user.nickname }}{% endblock %}
 		
 	{% block leftblocs %}
-	<div class="navbox">
-		<div class="title">
-			<h3>About!</h3>
+		<div class="messagebox">
+			<div class="messagebox-top"><div></div></div>
+				<div class="messagebox-content">
+					<div class="title">
+						<h3>About!</h3>
+					</div>
+					<div class="content">
+					</div>
+				</div>
+			<div class="messagebox-bottom"><div></div></div>
 		</div>
-		<div class="content">
-		</div>
-	</div>
 	{% endblock %}
 		
 	{% block tabs %}
