--- a/views/register.html
+++ b/views/register.html
@@ -1,13 +1,17 @@
 {% extends "base.html" %}
 
 	{% block leftblocs %}
- 		<div>
-			<div class="title">
-				<h3>Ready to go?</h3>
-			</div>
-			<div class="content">
-				<p>Wait, just one more thing...</p>
-			</div>
+		<div class="messagebox">
+			<div class="messagebox-top"><div></div></div>
+				<div class="messagebox-content">
+					<div class="title">
+						<h3>Ready to go?</h3>
+					</div>
+					<div class="content">
+						<p>Wait, just one more thing...</p>
+					</div>
+				</div>
+			<div class="messagebox-bottom"><div></div></div>
 		</div>
   	{% endblock %}
 	
