--- a/views/about.html
+++ b/views/about.html
@@ -23,5 +23,8 @@
 	
 	{% block main %}
 		<h1>About us</h1>
-		<p>We got to a stage when we wanted to easily share links, media and thoughts, and easily dicuss them after, and at the time, Pownce really did the trick. When Pownce went down, we turned to Twitter, but that really wasn't what we wanted. Twitter is meant for tiny sentences and mobile phone blogging, and while that can be useful, it's not what we want our sharing based around.</p>
+		<p>As addicted but far from asocial web geeks, when we discover a new gem online, or have some cool media or thoughts, we want to easily share it with friends and when Pownce was still up and running, our personnal sharing needs were satisfied.</p>
+		<p>When Pownce went down, we turned to Twitter, only to see our communication throttled to 140 characters, and while other sites like Jaiku or Friend Feed did allow longer messages with richer content, the social side of sharing didn't please us.</p>
+		<p>As for sites like Facebook, their content is generated mostly from the inside and "applications", the objective of which has yet to be demonstrated</p>
+		<p>Pint is our answer to the gap in between all those sites, the bridge which we feel, joins different points of view.</p>
 	{% endblock %}
