--- a/views/register.html
+++ b/views/register.html
@@ -16,7 +16,7 @@
   	{% endblock %}
 	
 	{% block main %}
-		<form action="/register" method="post" class="composer">
+		<form action="/register" method="post">
 			<div class="msgbox">
 				<div class="note">
 					<p>Before we let you roam free, we need to know what your nickname is going to be. This is to hide your Google account and email address.</p>
