--- a/views/base.html
+++ b/views/base.html
@@ -1,70 +1,108 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<link type="text/css" rel="stylesheet" href="/stylesheets/frame.css" />
 	<link type="text/css" rel="stylesheet" href="/stylesheets/colors.css" />
 	<title>{% block title %}Pint{% endblock %}</title>
+<!--
+	<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+	<script type="text/javascript">
+	  google.load('friendconnect', '0.8');
+	</script>
+	<script type="text/javascript">    
+		google.friendconnect.container.setParentUrl('/');
+		google.friendconnect.container.loadOpenSocialApi({
+			site: '08311002481026592939',
+			onload: function(securityToken) {
+				if (!window.timesloaded)
+				{
+					window.timesloaded = 1;
+				}
+				else
+				{
+					window.timesloaded++;
+				}
+				if (window.timesloaded > 1)
+				{
+					window.top.location.href = "/";
+				}
+			}
+		});
+	</script>
+-->
+	<script type="text/javascript" src="/scripts/mootools-1.2.2-core-yc.js"></script>
+	<script type="text/javascript" src="/scripts/mootools-1.2.2.2-more.js"></script>
+	{% block head %}
+	{% endblock %}
 </head>
 
 <body>
-	<div class="mainbox">
-		<div class="mainbox-top"><div></div></div>
-			<div class="mainbox-content">
-				<div id="topbox">
-					<div id="userbar">
-						<div id="userbar-top"><div></div></div>
-							<div id="userbar-content">
-								<ul id="userbar-ul">
-									{% ifequal nickname '' %}
-										{% ifequal tab 'onemorething' %}
-											<li><a href="/register" id="currentTab">One more thing...</a></li>
-										{% else %}
-											<li><a href="/login" class="loglink">Login</a></li>
-										{% endifequal %}
-									{% else %}
-											<li>{{ user.nickname }} :: </li>
-											<li><a href="/" {% ifequal tab "home" %}id="currentTab"{% endifequal %}>Home</a></li>
-											<li><a href="/user/{{ nickname }}" {% ifequal tab "profile" %}id="currentTab"{% endifequal %} >Profile</a></li>		
-											<li><a href="/settings" {% ifequal tab "settings" %}id="currentTab"{% endifequal %} >Settings</a></li>
-											{% if is_admin %}
-											<li><a href="/admin"{% ifequal tab "admin" %}id="currentTab"{% endifequal %}>Admin</a></li>
-											{% endif %}
-											<li><a href="/logout" class="loglink">Logout</a></li>
-									{% endifequal %}
-								</ul>
-							</div>
-						<div id="userbar-bottom"><div></div></div>
-					</div>
-					<div id="logo">
-					</div>
-				</div>
-				<div id="leftcolumn">
-				{% block leftblocs %}
-				{% endblock %}
-				</div>
-				<div id="maincolumn">
-					{% block main %}
-					{% endblock %}
-				</div>
-				<div class="clearer"></div>
-				<div id="footbox">
-					&copy; 2009
-					<a href="/about">About</a>
-				</div>
+	<div id="mainbox">
+		<div id="mainbox-header">
+			<div id="userbar">
+				<ul id="userbar-ul">
+					{% ifequal nickname '' %}
+						{% ifequal tab 'onemorething' %}
+							<li>One more thing...</li>
+						{% else %}
+							<li><a href="/login" class="loglink">Login</a></li>
+							<!--<li><a href="#" onclick="google.friendconnect.requestSignIn();">FC Sign in</a></li>-->
+						{% endifequal %}
+					{% else %}
+							<li><img src="/avatar/{{ nickname }}" title="{{ nickname }}" alt="{{ nickname }}" class="avatar-small" /></li>
+							<li><a href="/" {% ifequal tab "home" %}id="currentTab"{% endifequal %}>Home</a></li>
+							<li><a href="/user/{{ nickname }}" {% ifequal tab "profile" %}id="currentTab"{% endifequal %} >Profile</a></li>		
+							{% if is_admin %}
+							<!--<li><a href="/admin"{% ifequal tab "admin" %}id="currentTab"{% endifequal %}>Admin</a></li>-->
+							{% endif %}
+							<li><a href="/logout" class="loglink">Logout</a></li>
+					{% endifequal %}
+				</ul>
 			</div>
-		<div class="mainbox-bottom"><div></div></div>
+			<div id="logo">
+				<a href="/">
+					<img src="/images/logo.png" alt="PintMe"/>
+				</a>
+			</div>
+		</div>
+		<div class="clear"></div>
+		<div id="mainbox-content">
+			<div id="leftcolumn">
+			{% block leftblocs %}
+			{% endblock %}
+			</div>
+			<div id="rightcolumn">
+				{% block main %}
+				{% endblock %}
+			</div>
+			<div class="clear"></div>
+			<div id="centralcolumn">
+				{% block messages %}
+				{% endblock %}
+			</div>
+			<div class="clear"></div>
+			<div id="footbox">
+				&copy; 2009
+				<a href="/about">About</a>
+				<a href="/suggestions">Make a suggestion</a>
+			</div>
+		</div>
+		<div id="mainbox-footer"><div></div></div>
 	</div>
+<!--
 <script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-		try
-		{
-			var pageTracker = _gat._getTracker("UA-7258394-1");
-			pageTracker._trackPageview();
-		} catch(err) {}
-	</script>
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+	try
+	{
+		var pageTracker = _gat._getTracker("UA-7258394-1");
+		pageTracker._trackPageview();
+	} catch(err) {}
+</script>
+-->
 </body>
 </html>
