--- a/views/base.html
+++ b/views/base.html
@@ -3,8 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<link type="text/css" rel="stylesheet" href="/stylesheets/frame.css" />
-	<link type="text/css" rel="stylesheet" href="/stylesheets/colors.css" />
+	<link type="text/css" rel="stylesheet" href="/stylesheets/main.css" />
 	<title>{% block title %}Pint{% endblock %}</title>
 <!--
 	<script type="text/javascript" src="http://www.google.com/jsapi"></script>
